<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="?colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="230dp"
        android:layout_height="130dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/idEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?colorOnPrimary" />

    <EditText
        android:id="@+id/idEditText"
        android:layout_width="345dp"
        android:layout_height="40dp"
        android:hint="@string/id"
        android:background="@drawable/rectangle"
        android:textColor="@color/black"
        android:layout_marginTop="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="345dp"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:background="@drawable/rectangle"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idEditText" />

    <android.widget.Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/btn_round"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

    <TextView
        android:id="@+id/facebookloginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facebook"
        android:textColor="@color/blue"
        android:textSize="17sp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton"/>

    <TextView
        android:id="@+id/signInTextView"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:text="@string/signUp"
        android:textSize="17sp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/facebookloginTextView"/>

    <TextView
        android:id="@+id/notPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notpassword"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="@id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>